# schwarzschild_raytracer

./: BacOGL.sln  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: cmake.yml
BacOGL/: Benchmark.h  DisplayHandler.h  GeodesicSolver.h  Orbit.h  OutputHandler.h  PixelTransformer.h  RasterFunction.h  Render.h  RotMatrix3D.h  Spectator.h  SphereGraphic.h  TransUtilities.h  main.cpp
assets/: Frag.glsl
scripts/: build_debug.ps1  cmake_configure.ps1  vcpkg_install.ps1
